# glasstape-sdk-python

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  langchain_integration.py  test_complex_conditions.py  test_monitoring.py  test_natural_language.py  test_role_based_access.py  test_structured_parameters.py
glasstape/: __init__.py  agent_identity.py  cerbos_evaluator.py  cli.py  config.py  context.py  crypto.py  decorators.py  errors.py  orchestration.py  policy_converter.py  policy_engine.py  router.py
glasstape/modes/: __init__.py  local.py
policies/: README.md  analytics.data_access.v1.json  data.customer_lookup.v1.json  external.api_call.v1.json  finance.payments.v1.json
tests/: test_cerbos_evaluator.py  test_config.py  test_crypto.py  test_decorators.py  test_integration.py  test_policy_engine.py
